<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mainmenu"
    android:background="#f6f5f5">

    <Button
        android:id="@+id/hakkinda"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/griarkaplandesign"
        android:fontFamily="sans-serif"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="#F3F3F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exitbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ayarlar" />

    <Button
        android:id="@+id/notlarim"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/griarkaplandesign"
        android:fontFamily="sans-serif"
        android:text="@string/notlarim"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ayarlar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ayarlar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/griarkaplandesign"
        android:fontFamily="sans-serif"
        android:text="@string/ayarlar"
        android:textAllCaps="false"
        android:textColor="#F3F3F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/hakkinda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notlarim" />

    <Button
        android:id="@+id/exitbtn"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/griarkaplandesign"
        android:fontFamily="sans-serif"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hakkinda" />
</androidx.constraintlayout.widget.ConstraintLayout>