<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f6f5f5"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="#f6f5f5"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#f6f5f5"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/yeninotekle"
                android:layout_width="74dp"
                android:layout_height="43dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backmain1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/notekle_btn_design" />

            <ImageView
                android:id="@+id/backmain1"
                android:layout_width="52dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="190dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/backview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/yeninotekle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="?attr/homeAsUpIndicator"
                app:tint="#bbbfca"
                tools:srcCompat="@drawable/abc_vector_test" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="59dp"
            android:orientation="vertical"
            android:background="#f6f5f5">

            <TextView
                android:id="@+id/zamantv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tarihvesaat"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/notesLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6f5f5"
        android:listSelector="@null" />


</LinearLayout>