<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hakkinda">

    <ImageView
        android:id="@+id/backmain2"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="380dp"
        android:layout_marginBottom="671dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="#bbbfca"
        tools:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="244dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hakkindametni"
        android:textColor="#757070"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="37dp"
        android:background="#FFFDE7"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/csembol" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="24dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="44dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="244dp"
        android:layout_height="56dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/gelistirici"
        android:textAlignment="center"
        android:textColor="#757070"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>